src/main/java/uk/nhs/digital/mait/tkwx/tk/internalservices/validation/parser/ValidationParser.java
// Generated from ValidationParser.g4 by ANTLR 4.5.3

package uk.nhs.digital.mait.tkwx.tk.internalservices.validation.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ValidationParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, NL=2, INTEGER=3, DOT=4, IF=5, THEN=6, ELSE=7, ENDIF=8, INCLUDE=9, 
		NONE=10, LITERAL=11, XPATH_=12, JSONPATH_=13, SUB=14, ALWAYS=15, NEVER=16, 
		SCHEMA=17, CONFORMANCE_SCHEMA=18, CDA_CONFORMANCE_SCHEMA=19, SIGNATURE=20, 
		CDA_RENDERER=21, CDA_TEMPLATE_LIST=22, HAPIFHIRVALIDATOR=23, FHIRRESOURCEVALIDATOR=24, 
		TERMINOLOGYVALIDATOR=25, XPATHEXISTS=26, XPATHNOTEXISTS=27, HL7_XPATHEXISTS=28, 
		HL7_XPATHNOTEXISTS=29, SOAP_XPATHEXISTS=30, SOAP_XPATHNOTEXISTS=31, EBXML_XPATHEXISTS=32, 
		EBXML_XPATHNOTEXISTS=33, EQUALS=34, NOTEQUALS=35, MATCHES=36, NOTMATCHES=37, 
		CONTAINS=38, NOTCONTAINS=39, XPATHEQUALS=40, XPATHNOTEQUALS=41, HL7_XPATHEQUALS=42, 
		HL7_XPATHNOTEQUALS=43, EBXML_XPATHEQUALS=44, EBXML_XPATHNOTEQUALS=45, 
		SOAP_XPATHEQUALS=46, SOAP_XPATHNOTEQUALS=47, XPATHEQUALSIGNORECASE=48, 
		XPATHNOTEQUALSIGNORECASE=49, XPATHMATCHES=50, XPATHNOTMATCHES=51, HL7_XPATHMATCHES=52, 
		HL7_XPATHNOTMATCHES=53, XPATHCOMPARE=54, XPATHCONTAINS=55, XPATHNOTCONTAINS=56, 
		XPATHCONTAINSIGNORECASE=57, XPATHNOTCONTAINSIGNORECASE=58, XSLT=59, HL7_XSLT=60, 
		EBXML_XSLT=61, CDA_CONFORMANCE_XSLT=62, UNCHECKED=63, CONTEXT_PATH=64, 
		CONTENT=65, HTTP_HEADER=66, JWT_PAYLOAD=67, XPATHIN=68, JSONPATHEXISTS=69, 
		JSONPATHNOTEXISTS=70, JSONPATHEQUALS=71, JSONPATHNOTEQUALS=72, JSONPATHEQUALSIGNORECASE=73, 
		JSONPATHNOTEQUALSIGNORECASE=74, JSONPATHMATCHES=75, JSONPATHNOTMATCHES=76, 
		JSONPATHCOMPARE=77, JSONPATHCONTAINS=78, JSONPATHNOTCONTAINS=79, JSONPATHCONTAINSIGNORECASE=80, 
		JSONPATHNOTCONTAINSIGNORECASE=81, VALIDATION_RULESET_NAME=82, VALIDATION_RULESET_VERSION=83, 
		VALIDATION_RULESET_TIMESTAMP=84, VALIDATION_RULESET_AUTHOR=85, VALIDATE=86, 
		SET=87, CHECK=88, ANNOTATION=89, SUBSET=90, DOLLAR=91, IDENTIFIER=92, 
		VARIABLE=93, DOT_SEPARATED_IDENTIFIER=94, URL=95, PATH=96, XPATH=97, SPACES=98, 
		DEFAULT=99, ANNOTATION_TEXT=100, SP=101, CST=102, LF=103, JSONPATHIN=104;
	public static final int
		RULE_input = 0, RULE_validation_header = 1, RULE_validation_header_type = 2, 
		RULE_validate_statement = 3, RULE_service_name = 4, RULE_validate_directives = 5, 
		RULE_validate_directive = 6, RULE_check_directive = 7, RULE_sub_name = 8, 
		RULE_set_directive = 9, RULE_set_type = 10, RULE_if_directive = 11, RULE_then_clause = 12, 
		RULE_else_clause = 13, RULE_endif = 14, RULE_test_statement = 15, RULE_unchecked_test = 16, 
		RULE_unchecked_test_name = 17, RULE_schema_test = 18, RULE_schema_type = 19, 
		RULE_schema_path = 20, RULE_schema_xpath = 21, RULE_hapifhirvalidator_id = 22, 
		RULE_no_arg_test = 23, RULE_xml_match_source = 24, RULE_xpath_one_arg_test = 25, 
		RULE_xpath_one_arg_comparison_type = 26, RULE_xpath_one_arg_type = 27, 
		RULE_json_match_source = 28, RULE_jsonpath_one_arg_test = 29, RULE_jsonpath_one_arg_comparison_type = 30, 
		RULE_jsonpath_one_arg_type = 31, RULE_text_match_type = 32, RULE_text_match_source = 33, 
		RULE_http_header_name = 34, RULE_xpath_arg = 35, RULE_xpath_two_arg_comparison_type = 36, 
		RULE_xpath_two_arg_test = 37, RULE_xpath_two_arg_type = 38, RULE_xpath_multi_arg_test = 39, 
		RULE_xpath_multi_arg_type = 40, RULE_jsonpath_arg = 41, RULE_jsonpath_two_arg_comparison_type = 42, 
		RULE_jsonpath_two_arg_test = 43, RULE_jsonpath_two_arg_type = 44, RULE_jsonpath_multi_arg_test = 45, 
		RULE_jsonpath_multi_arg_type = 46, RULE_annotation_directive = 47, RULE_subset_statement = 48, 
		RULE_subset_name = 49, RULE_include_statement = 50;
	public static final String[] ruleNames = {
		"input", "validation_header", "validation_header_type", "validate_statement", 
		"service_name", "validate_directives", "validate_directive", "check_directive", 
		"sub_name", "set_directive", "set_type", "if_directive", "then_clause", 
		"else_clause", "endif", "test_statement", "unchecked_test", "unchecked_test_name", 
		"schema_test", "schema_type", "schema_path", "schema_xpath", "hapifhirvalidator_id", 
		"no_arg_test", "xml_match_source", "xpath_one_arg_test", "xpath_one_arg_comparison_type", 
		"xpath_one_arg_type", "json_match_source", "jsonpath_one_arg_test", "jsonpath_one_arg_comparison_type", 
		"jsonpath_one_arg_type", "text_match_type", "text_match_source", "http_header_name", 
		"xpath_arg", "xpath_two_arg_comparison_type", "xpath_two_arg_test", "xpath_two_arg_type", 
		"xpath_multi_arg_test", "xpath_multi_arg_type", "jsonpath_arg", "jsonpath_two_arg_comparison_type", 
		"jsonpath_two_arg_test", "jsonpath_two_arg_type", "jsonpath_multi_arg_test", 
		"jsonpath_multi_arg_type", "annotation_directive", "subset_statement", 
		"subset_name", "include_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'.'", null, null, null, null, "'INCLUDE'", "'NONE'", 
		"'literal'", null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'VALIDATION-RULESET-NAME'", "'VALIDATION-RULESET-VERSION'", "'VALIDATION-RULESET-TIMESTAMP'", 
		"'VALIDATION-RULESET-AUTHOR'", "'VALIDATE'", "'SET'", "'CHECK'", "'ANNOTATION'", 
		"'SUBSET'", "'$'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMENT", "NL", "INTEGER", "DOT", "IF", "THEN", "ELSE", "ENDIF", 
		"INCLUDE", "NONE", "LITERAL", "XPATH_", "JSONPATH_", "SUB", "ALWAYS", 
		"NEVER", "SCHEMA", "CONFORMANCE_SCHEMA", "CDA_CONFORMANCE_SCHEMA", "SIGNATURE", 
		"CDA_RENDERER", "CDA_TEMPLATE_LIST", "HAPIFHIRVALIDATOR", "FHIRRESOURCEVALIDATOR", 
		"TERMINOLOGYVALIDATOR", "XPATHEXISTS", "XPATHNOTEXISTS", "HL7_XPATHEXISTS", 
		"HL7_XPATHNOTEXISTS", "SOAP_XPATHEXISTS", "SOAP_XPATHNOTEXISTS", "EBXML_XPATHEXISTS", 
		"EBXML_XPATHNOTEXISTS", "EQUALS", "NOTEQUALS", "MATCHES", "NOTMATCHES", 
		"CONTAINS", "NOTCONTAINS", "XPATHEQUALS", "XPATHNOTEQUALS", "HL7_XPATHEQUALS", 
		"HL7_XPATHNOTEQUALS", "EBXML_XPATHEQUALS", "EBXML_XPATHNOTEQUALS", "SOAP_XPATHEQUALS", 
		"SOAP_XPATHNOTEQUALS", "XPATHEQUALSIGNORECASE", "XPATHNOTEQUALSIGNORECASE", 
		"XPATHMATCHES", "XPATHNOTMATCHES", "HL7_XPATHMATCHES", "HL7_XPATHNOTMATCHES", 
		"XPATHCOMPARE", "XPATHCONTAINS", "XPATHNOTCONTAINS", "XPATHCONTAINSIGNORECASE", 
		"XPATHNOTCONTAINSIGNORECASE", "XSLT", "HL7_XSLT", "EBXML_XSLT", "CDA_CONFORMANCE_XSLT", 
		"UNCHECKED", "CONTEXT_PATH", "CONTENT", "HTTP_HEADER", "JWT_PAYLOAD", 
		"XPATHIN", "JSONPATHEXISTS", "JSONPATHNOTEXISTS", "JSONPATHEQUALS", "JSONPATHNOTEQUALS", 
		"JSONPATHEQUALSIGNORECASE", "JSONPATHNOTEQUALSIGNORECASE", "JSONPATHMATCHES", 
		"JSONPATHNOTMATCHES", "JSONPATHCOMPARE", "JSONPATHCONTAINS", "JSONPATHNOTCONTAINS", 
		"JSONPATHCONTAINSIGNORECASE", "JSONPATHNOTCONTAINSIGNORECASE", "VALIDATION_RULESET_NAME", 
		"VALIDATION_RULESET_VERSION", "VALIDATION_RULESET_TIMESTAMP", "VALIDATION_RULESET_AUTHOR", 
		"VALIDATE", "SET", "CHECK", "ANNOTATION", "SUBSET", "DOLLAR", "IDENTIFIER", 
		"VARIABLE", "DOT_SEPARATED_IDENTIFIER", "URL", "PATH", "XPATH", "SPACES", 
		"DEFAULT", "ANNOTATION_TEXT", "SP", "CST", "LF", "JSONPATHIN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ValidationParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	     private final static boolean DEBUG = false ;

	public ValidationParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ValidationParser.EOF, 0); }
		public List<Validation_headerContext> validation_header() {
			return getRuleContexts(Validation_headerContext.class);
		}
		public Validation_headerContext validation_header(int i) {
			return getRuleContext(Validation_headerContext.class,i);
		}
		public List<Validate_statementContext> validate_statement() {
			return getRuleContexts(Validate_statementContext.class);
		}
		public Validate_statementContext validate_statement(int i) {
			return getRuleContext(Validate_statementContext.class,i);
		}
		public List<Subset_statementContext> subset_statement() {
			return getRuleContexts(Subset_statementContext.class);
		}
		public Subset_statementContext subset_statement(int i) {
			return getRuleContext(Subset_statementContext.class,i);
		}
		public List<Validate_directiveContext> validate_directive() {
			return getRuleContexts(Validate_directiveContext.class);
		}
		public Validate_directiveContext validate_directive(int i) {
			return getRuleContext(Validate_directiveContext.class,i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationParserVisitor ) return ((ValidationParserVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(106);
				switch (_input.LA(1)) {
				case VALIDATION_RULESET_NAME:
				case VALIDATION_RULESET_VERSION:
				case VALIDATION_RULESET_TIMESTAMP:
				case VALIDATION_RULESET_AUTHOR:
					{
					setState(102);
					validation_header();
					}
					break;
				case VALIDATE:
					{
					setState(103);
					validate_statement();
					}
					break;
				case SUBSET:
					{
					setState(104);
					subset_statement();
					}
					break;
				case IF:
				case INCLUDE:
				case SET:
				case CHECK:
				case ANNOTATION:
					{
					setState(105);
					validate_directive();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(108); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IF || _la==INCLUDE || ((((_la - 82)) & ~0x3f) == 0 && ((1L << (_la - 82)) & ((1L << (VALIDATION_RULESET_NAME - 82)) | (1L << (VALIDATION_RULESET_VERSION - 82)) | (1L << (VALIDATION_RULESET_TIMESTAMP - 82)) | (1L << (VALIDATION_RULESET_AUTHOR - 82)) | (1L << (VALIDATE - 82)) | (1L << (SET - 82)) | (1L << (CHECK - 82)) | (1L << (ANNOTATION - 82)) | (1L << (SUBSET - 82)))) != 0) );
			setState(110);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Validation_headerContext extends ParserRuleContext {
		public Validation_header_typeContext validation_header_type() {
			return getRuleContext(Validation_header_typeContext.class,0);
		}
		public TerminalNode ANNOTATION_TEXT() { return getToken(ValidationParser.ANNOTATION_TEXT, 0); }
		public Validation_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validation_header; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationParserVisitor ) return ((ValidationParserVisitor<? extends T>)visitor).visitValidation_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Validation_headerContext validation_header() throws RecognitionException {
		Validation_headerContext _localctx = new Validation_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_validation_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			validation_header_type();
			setState(113);
			match(ANNOTATION_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Validation_header_typeContext extends ParserRuleContext {
		public TerminalNode VALIDATION_RULESET_NAME() { return getToken(ValidationParser.VALIDATION_RULESET_NAME, 0); }
		public TerminalNode VALIDATION_RULESET_VERSION() { return getToken(ValidationParser.VALIDATION_RULESET_VERSION, 0); }
		public TerminalNode VALIDATION_RULESET_TIMESTAMP() { return getToken(ValidationParser.VALIDATION_RULESET_TIMESTAMP, 0); }
		public TerminalNode VALIDATION_RULESET_AUTHOR() { return getToken(ValidationParser.VALIDATION_RULESET_AUTHOR, 0); }
		public Validation_header_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validation_header_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationParserVisitor ) return ((ValidationParserVisitor<? extends T>)visitor).visitValidation_header_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Validation_header_typeContext validation_header_type() throws RecognitionException {
		Validation_header_typeContext _localctx = new Validation_header_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_validation_header_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_la = _input.LA(1);
			if ( !(((((_la - 82)) & ~0x3f) == 0 && ((1L << (_la - 82)) & ((1L << (VALIDATION_RULESET_NAME - 82)) | (1L << (VALIDATION_RULESET_VERSION - 82)) | (1L << (VALIDATION_RULESET_TIMESTAMP - 82)) | (1L << (VALIDATION_RULESET_AUTHOR - 82)))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Validate_statementContext extends ParserRuleContext {
		public TerminalNode VALIDATE() { return getToken(ValidationParser.VALIDATE, 0); }
		public Service_nameContext service_name() {
			return getRuleContext(Service_nameContext.class,0);
		}
		public Validate_directivesContext validate_directives() {
			return getRuleContext(Validate_directivesContext.class,0);
		}
		public Validate_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validate_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationParserVisitor ) return ((ValidationParserVisitor<? extends T>)visitor).visitValidate_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Validate_statementContext validate_statement() throws RecognitionException {
		Validate_statementContext _localctx = new Validate_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_validate_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(VALIDATE);
			setState(118);
			service_name();
			setState(119);
			validate_directives();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Service_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ValidationParser.IDENTIFIER, 0); }
		public TerminalNode DOT_SEPARATED_IDENTIFIER() { return getToken(ValidationParser.DOT_SEPARATED_IDENTIFIER, 0); }
		public TerminalNode URL() { return getToken(ValidationParser.URL, 0); }
		public TerminalNode INTEGER() { return getToken(ValidationParser.INTEGER, 0); }
		public Service_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_service_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationParserVisitor ) return ((ValidationParserVisitor<? extends T>)visitor).visitService_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Service_nameContext service_name() throws RecognitionException {
		Service_nameContext _localctx = new Service_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_service_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || ((((_la - 92)) & ~0x3f) == 0 && ((1L << (_la - 92)) & ((1L << (IDENTIFIER - 92)) | (1L << (DOT_SEPARATED_IDENTIFIER - 92)) | (1L << (URL - 92)))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Validate_directivesContext extends ParserRuleContext {
		public List<Validate_directiveContext> validate_directive() {
			return getRuleContexts(Validate_directiveContext.class);
		}
		public Validate_directiveContext validate_directive(int i) {
			return getRuleContext(Validate_directiveContext.class,i);
		}
		public Validate_directivesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validate_directives; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationParserVisitor ) return ((ValidationParserVisitor<? extends T>)visitor).visitValidate_directives(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Validate_directivesContext validate_directives() throws RecognitionException {
		Validate_directivesContext _localctx = new Validate_directivesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_validate_directives);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(123);
					validate_directive();
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Validate_directiveContext extends ParserRuleContext {
		public Check_directiveContext check_directive() {
			return getRuleContext(Check_directiveContext.class,0);
		}
		public Set_directiveContext set_directive() {
			return getRuleContext(Set_directiveContext.class,0);
		}
		public If_directiveContext if_directive() {
			return getRuleContext(If_directiveContext.class,0);
		}
		public Annotation_directiveContext annotation_directive() {
			return getRuleContext(Annotation_directiveContext.class,0);
		}
		public Include_statementContext include_statement() {
			return getRuleContext(Include_statementContext.class,0);
		}
		public Validate_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validate_directive; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationParserVisitor ) return ((ValidationParserVisitor<? extends T>)visitor).visitValidate_directive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Validate_directiveContext validate_directive() throws RecognitionException {
		Validate_directiveContext _localctx = new Validate_directiveContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_validate_directive);
		try {
			setState(134);
			switch (_input.LA(1)) {
			case CHECK:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				check_directive();
				}
				break;
			case SET:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				set_directive();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				if_directive();
				}
				break;
			case ANNOTATION:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				annotation_directive();
				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 5);
				{
				setState(133);
				include_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Check_directiveContext extends ParserRuleContext {
		public TerminalNode CHECK() { return getToken(ValidationParser.CHECK, 0); }
		public Test_statementContext test_statement() {
			return getRuleContext(Test_statementContext.class,0);
		}
		public TerminalNode SUB() { return getToken(ValidationParser.SUB, 0); }
		public Sub_nameContext sub_name() {
			return getRuleContext(Sub_nameContext.class,0);
		}
		public Check_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_check_directive; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValidationParserVisitor ) return ((ValidationParserVisitor<? extends T>)visitor).visitCheck_directive(this);
			else return visitor.visitChildren(this);
		}
	}
